; ModuleID = '/home/carl/AnghaBench/vlc/test/src/input/extr_stream.c_libc_tell.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/input/extr_stream.c_libc_tell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reader = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.reader*)* @libc_tell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @libc_tell(%struct.reader* %0) #0 {
  %2 = alloca %struct.reader*, align 8
  %3 = alloca i64, align 8
  store %struct.reader* %0, %struct.reader** %2, align 8
  %4 = load %struct.reader*, %struct.reader** %2, align 8
  %5 = getelementptr inbounds %struct.reader, %struct.reader* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @ftell(i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = icmp sge i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i64, i64* %3, align 8
  ret i64 %13
}

declare dso_local i64 @ftell(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
